<?xml version="1.0" encoding="utf-8"?>
 <!-- comments here -->
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
		 xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
		 android:id="@android:id/tabhost"
		 android:layout_width="fill_parent"
		 android:layout_height="fill_parent">
	<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="fill_parent">
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		<LinearLayout
		android:id="@+id/portalTab_1"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/hello_help_text"
			android:typeface="sans"
			android:textStyle="bold"
			android:id="@style/IcsText"
			android:linksClickable="true"/>
			</ScrollView>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/portalTab_2"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
			   <TextView
        		 android:text="@string/portal_title"
        		 android:layout_height="wrap_content"
       	 	     android:layout_width="wrap_content"
        		 android:layout_gravity="center"
         		 android:layout_marginBottom="10dip"
         		 android:layout_marginTop="10dip"
         		 android:id="@style/IcsText" 
         		 android:textSize="24.5sp" />
         		 <ImageView
         		 android:src="@drawable/gift128"
         		 android:layout_width="128sp"
         		 android:layout_height="128sp"
         		 android:layout_gravity="center">
         		 </ImageView>
      			<Button
         			android:id="@+id/contact_button"
         			android:layout_width="fill_parent"
         			android:layout_height="wrap_content"
         			android:text="@string/contacts"
         			android:textStyle="bold"
         			android:layout_marginBottom="25dp" />
      			<Button
         			android:id="@+id/add_button"
         			android:layout_width="fill_parent"
         			android:layout_height="wrap_content"
         			android:text="@string/add"
         			android:textStyle="bold"
         			android:layout_marginBottom="25dp" />
      			<Button
         			android:id="@+id/exit_button"
         			android:layout_width="fill_parent"
         			android:layout_height="wrap_content"
         			android:text="@string/exit"
         			android:textStyle="bold" />
         		 <com.google.ads.AdView android:id="@+id/adViewPortal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a14df1679786f60"
                         ads:adSize="BANNER"  
                         />
         			
		</LinearLayout>
		
		
		</FrameLayout>
		
	</LinearLayout>
</TabHost>